<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RAS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_title">Refresh</string>

    <!-- Drawer layout -->
    <string name="drawer_open">open</string>
    <string name="drawer_close">closed</string>
    
    <!-- Login page -->
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    
    <!-- Profile page -->
    <string name="profile_title">Profile</string>
    <string name="age_title">Age</string>
    <string name="length_title">Length</string>
    <string name="weight_title">Weight</string>
    <string name="turnbond_id_title">Turnbond ID</string>
    <string name="vault_button_title">See vaults</string>
    
    <!-- Vault page -->
    <string name="vault_title">Vault</string>
    <string name="duration_title">Duration</string>
    <string name="e_score_title">E-Score</string>
    <string name="d_score_title">D-Score</string>
    <string name="penalty_title">Penalty</string>
    <string name="competition_title">Competition</string>
    <string name="vault_type_title">Vault type</string>
    <string name="location_title">Location</string>
    <string name="compare_button_title">Compare this vault</string>
    <string name="chart_button_title">Chart information</string>
    
    <!-- Compare page -->
    <string name="compare_title">Compare</string>
    
    <!-- Chart page -->
    <string name="chart_title">Chart</string>
    
    <!-- Settings page -->
    <string name="settings_title">Settings</string>
    <string name="old_password_title">Fill in your old password</string>
    <string name="old_password">Old password</string>
    <string name="new_password_title">Fill in your new password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save_new_password_title">Save new password</string>
    <string name="change_password_title">Change password</string>
    
    <!-- Menu page -->
    <string name="menu_logout_title">Logout</string>
    <string name="menu_settings_title">Settings</string>
    
    <!-- Filter dialog page -->
    <string name="filter_title">Filter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="divider">Divider</string>
    <string name="clear_button_title">Clear</string>
    
</resources>
